[gd_scene load_steps=25 format=3 uid="uid://sf0ngt0mifqa"]

[ext_resource type="Script" uid="uid://bu424e6ida6ma" path="res://npc.gd" id="1_xxcha"]
[ext_resource type="Texture2D" uid="uid://bg0k2qwoehnrc" path="res://assets/sprites/CortesDoMapa/_Idle.png" id="2_kh24r"]
[ext_resource type="Texture2D" uid="uid://b31qbydqhwrwt" path="res://assets/sprites/player/IdleVamp.png" id="3_kh24r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gu3sj"]
size = Vector2(77, 49)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul7y6"]
atlas = ExtResource("2_kh24r")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc6q4"]
atlas = ExtResource("2_kh24r")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcvl2"]
atlas = ExtResource("2_kh24r")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_d61ma"]
atlas = ExtResource("2_kh24r")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_slxoh"]
atlas = ExtResource("2_kh24r")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l64hl"]
atlas = ExtResource("2_kh24r")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_215dd"]
atlas = ExtResource("2_kh24r")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5bpe"]
atlas = ExtResource("2_kh24r")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_upjdb"]
atlas = ExtResource("2_kh24r")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u41a8"]
atlas = ExtResource("2_kh24r")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh24r"]
atlas = ExtResource("3_kh24r")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgete"]
atlas = ExtResource("3_kh24r")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gu3sj"]
atlas = ExtResource("3_kh24r")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytjd8"]
atlas = ExtResource("3_kh24r")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hivs1"]
atlas = ExtResource("3_kh24r")
region = Rect2(512, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_cgete"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul7y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc6q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcvl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d61ma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slxoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l64hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_215dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5bpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upjdb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u41a8")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh24r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgete")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gu3sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytjd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hivs1")
}],
"loop": true,
"name": &"idle Vamp",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_ytjd8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hivs1"]
bg_color = Color(0.187176, 0.187176, 0.187176, 0.552941)

[sub_resource type="LabelSettings" id="LabelSettings_faxwa"]
font_size = 8
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxcha"]
size = Vector2(25, 71)

[node name="NPC" type="StaticBody2D"]
position = Vector2(0.9, 0)
collision_layer = 3
script = ExtResource("1_xxcha")
metadata/_edit_vertical_guides_ = [84.0, 768.0, 68.0, 752.0]
metadata/_edit_horizontal_guides_ = [73.0, 61.0, 161.0, 149.0]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4.5, 24.5)
shape = SubResource("RectangleShape2D_gu3sj")

[node name="Sprite" type="AnimatedSprite2D" parent="Area2D"]
sprite_frames = SubResource("SpriteFrames_cgete")
animation = &"idle Vamp"
autoplay = "idle Vamp"
frame_progress = 0.895625

[node name="CanvasLayer" type="CanvasLayer" parent="Area2D"]

[node name="CaixaDeDialogo" type="Label" parent="Area2D/CanvasLayer"]
offset_left = 68.0
offset_top = 61.0
offset_right = 768.0
offset_bottom = 161.0
theme = SubResource("Theme_ytjd8")
theme_override_styles/normal = SubResource("StyleBoxFlat_hivs1")
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="TextoDialogo" type="Label" parent="Area2D/CanvasLayer"]
offset_left = 84.0
offset_top = 74.0
offset_right = 751.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 15
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="Area2D/CanvasLayer"]

[node name="LabelInteração" type="Label" parent="Area2D"]
offset_left = -24.0
offset_top = -34.0
offset_right = 37.0
label_settings = SubResource("LabelSettings_faxwa")
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.5, 26.5)
shape = SubResource("RectangleShape2D_xxcha")
debug_color = Color(0.96602, 0, 0.483122, 0.42)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
